fixed checkbox alignment for nouni

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2009,7 +2009,7 @@ form.self-deposit-form input, form.self-deposit-form textarea {
 }
 
 
-form.self-deposit-form input#acceptedAgreement {
+form.self-deposit-form input#acceptedAgreement, form.self-deposit-form input#nouni {
 	 
  float: left;
  width: 18px;
